[tool.poetry]
name = "rd-langchain"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false


[tool.poetry.dependencies]
python = "^3.11"
langgraph = "^0.6.7"
langsmith = "^0.4.27"
langchain = "^0.3.27"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
